[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshparty"
description = "a service to work with meshes"
authors = [
    {name = "Sven Dorkenwald", email = "svenmd@princeton.edu"},
    {name = "Forrest Collman", email = "forrestc@alleninstitute.org"},
    {name = "Casey Schneider-Mizell", email = "caseys@alleninstitute.org"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py",
    "numpy",
    "scipy>=1.3.0",
    "networkx",
    "multiwrapper",
    "cloud-volume>=1.16.0",
    "trimesh[easy]>=4.0.0",
    "pandas",
    "orjson",
    "tables",
    "blosc",
]

[dependency-groups]
dev = [
    "scikit-learn",
    "imageio",
    "ipykernel",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

[project.optional-dependencies]
SDF = []
REPAIR = ["caveclient>=4.0.0"]
test = [
    "scikit-learn",
    "imageio",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]
viz = [
    "vtk",
]

[project.urls]
"Homepage" = "https://github.com/sdorkenw/MeshParty"
"Bug Tracker" = "https://github.com/sdorkenw/MeshParty/issues"

[tool.setuptools]
packages = ["meshparty"]
include-package-data = true

[tool.setuptools_scm]
write_to = "meshparty/_version.py"

[tool.pytest.ini_options]
testpaths = ["test"]
required_plugins = ["pytest-mock"]
