[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshparty"
description = "a service to work with meshes"
authors = [
    {name = "Sven Dorkenwald", email = "svenmd@princeton.edu"},
    {name = "Forrest Collman", email = "forrestc@alleninstitute.org"},
    {name = "Casey Schneider-Mizell", email = "caseys@alleninstitute.org"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py",
    "numpy>=2.0.0",
    "scipy>=1.3.0",
    "scikit-learn",
    "multiwrapper",
    "cloud-volume>=1.16.0",
    "pymeshfix>=0.12.3",
    "tables>=3.0.0",
    "blosc>=1.11.2",
    "orjson>=3.0.0",
    "pandas>=2.0.0",
    "trimesh[easy]>=4.0.0",
    "networkx",
]

[dependency-groups]
dev = [
    "pytest-mock",
    "ipykernel",
    "imageio",
    "vtk",
]


[project.optional-dependencies]
REPAIR = ["caveclient>=4.0.0"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock"
]
viz = [
    "vtk"
]

[project.urls]
"Homepage" = "https://github.com/CAVEconnectome/MeshParty"
"Bug Tracker" = "https://github.com/CAVEconnectome/MeshParty/issues"

[tool.setuptools]
packages = ["meshparty"]
include-package-data = true

[tool.setuptools_scm]
write_to = "meshparty/_version.py"

[tool.pytest.ini_options]
testpaths = ["test"]
required_plugins = ["pytest-mock"]

